# DocuSage

./: .gitignore  README.md  RECRUITER_QA.md  index.html
.github/prompts/: plan-docuSage.prompt.md  plan-docuSagePhase2.prompt.md
.github/workflows/: build-release.yml  pages.yml  release.yml
DocuSage/: README.md  index.html  package-lock.json  package.json  vite.config.ts
DocuSage/.github/workflows/: release.yml
DocuSage/docs/: hidden-assistant-mode.md
DocuSage/public/: robots.txt  sitemap.xml
DocuSage/src/: App.css  App.tsx  MarketingSite.css  MarketingSite.tsx
DocuSage/src-tauri/: .env.example  .gitignore  Cargo.toml  tauri.conf.json
DocuSage/src-tauri/capabilities/: default.json
DocuSage/src-tauri/src/: assistant.rs  commands.rs  lib.rs  main.rs  providers.rs  rag.rs
DocuSage/src/lib/: api.ts
assets/: index-CPOP14oi.css  index-i88SLd9L.js
