[package]
name = "docusage"
version = "0.3.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "docusage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
mistralrs = "0.7"
lancedb = "0.26"
pdf-extract = "0.10"
dotenv = "0.15"
dirs = "6.0"
fastembed = "4"
arrow-array = "57"
arrow-schema = "57"
arrow-cast = "57"
futures-util = "0.3"

# Static linking for lzma-sys (transitive dep from lancedb) to avoid
# dynamic linking issues on Windows and in CI environments.
lzma-sys = { version = "*", features = ["static"] }

